# jsonschema-scratch

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  Makefile  README.rst  pyproject.toml  requirements.txt
jsonschema_scratch/: app.py  config.py  errors.py  schema.py  validate.py
schema_examples/: barbarian-highlord-sword.json  cloak-of-the-spirit-radiant.json  shortsword-of-quickness.json
schemas/: bag.json  definitions.json  equipment.json  weapon.json
tests/: conftest.py  test_app.py  test_errors.py  test_schemas.py  test_validate.py
