[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
versioning = "semver"
tag = "v"

[tool.poetry]
name = "jsonschema-scratch"
version = "0.2.1"
description = "Playground for messing with json schemas."
authors = ["Matt Pladna <pladdypants@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.1"
flask = "~=1.1"
jsonschema = "~=3.2"
jsonref = "^0.2"

[tool.poetry.dev-dependencies]
pytest = "~=5.3"
black = "^19.10b0"
flake8 = "~=3.8.2"
bandit = "~=1.6.2"
safety = "~=1.9.0"
sphinx = "~=3.0.4"
pytest-cov = "~=2.10"
codecov = "~=2.1.4"
dephell = "^0.8.3"
pre-commit = "~=2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
