[tool.poetry]
name = "jsonschema-scratch"
version = "0.2.3"
description = "Playground for messing with json schemas."
authors = ["Matt Pladna <pladdypants@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.8"
flask = ">=2.3.2,<2.4.0"
jsonschema = ">=4.17.3,<4.18.0"
jsonref = "^0.2"

[tool.poetry.dev-dependencies]
pytest = "==5.*,>=5.3.0"
black = "==19.*,>=19.10.0.b0"
flake8 = "==3.8.*,>=3.8.2"
bandit = "==1.6.*,>=1.6.2"
safety = "==1.9.*,>=1.9.0"
sphinx = "==3.0.*,>=3.0.4"
pytest-cov = "==2.*,>=2.10.0"
codecov = "==2.1.*,>=2.1.4"
pre-commit = "==2.6.*,>=2.6.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=2.9.2,<2.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
